// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account actions - ADD_BATCH should add contacts 1`] = `
Immutable.Map {
  "1": Immutable.Map {
    "id": 1,
    "badge": undefined,
    "isActive": true,
    "name": "User test",
    "recipientId": "test",
  },
  "2": Immutable.Map {
    "id": 2,
    "badge": undefined,
    "isActive": false,
    "name": "User 2",
    "recipientId": "user2",
  },
  "3": Immutable.Map {
    "id": 3,
    "name": "User 3",
    "recipientId": "user3",
    "isActive": 0,
  },
  "4": Immutable.Map {
    "id": 4,
    "name": "User 4",
    "recipientId": "user4",
    "isActive": 0,
  },
}
`;

exports[`Account actions - UPDATE-ACCOUNTS should update: badge 1`] = `
Immutable.Map {
  "1": Immutable.Map {
    "id": 1,
    "badge": undefined,
    "isActive": true,
    "name": "User test",
    "recipientId": "test",
  },
  "2": Immutable.Map {
    "id": 2,
    "badge": 1692,
    "isActive": false,
    "name": "User 2",
    "recipientId": "user2",
  },
}
`;
